# models/bookModel.js
@@ -4,9 +4,19 @@ const bookSchema = new mongoose.Schema(
   {
     name: String,
     author: String,
+    totalCopies: {
+      type: Number,
+      default: 1,
+    },
+    copies: [
+      {
+        serialNumber: { type: String, unique: true },
+        isAvailable: { type: Boolean, default: true },
+      },
+    ],
     currentAvailability: {
       type: Boolean,
-      default: true
+      default: true,
     },
   },
   {
